syntax = "proto3";

service CarService {
    rpc CreateCar(CreateCarRequest) returns (CreateCarResponse);
    rpc DeleteCar(DeleteCarRequest) returns (DeleteCarResponse);
    rpc GetCar(GetCarRequest) returns (GetCarResponse);
    rpc ListCar(ListCarRequest) returns (ListCarResponse);
    rpc UpdateCar(UpdateCarRequest) returns (UpdateCarResponse);
}

message Car {
    string nome = 1;
    string marca = 2;
    int32 anoFab = 3;
    int32 anoMod = 4;
    float preco = 5;
    string id = 6;
}

message CreateCarRequest {
    Car car = 1;
}

message CreateCarResponse {
    Car car = 1;
}

message GetCarRequest {
	string id = 1;
}

message GetCarResponse {
  Car car = 1;
}

message DeleteCarRequest {
    string id = 1;
}

message DeleteCarResponse {
    string id = 1;
}

message ListCarRequest {}

message ListCarResponse {
    repeated Car cars = 1;
}

message UpdateCarRequest {
    Car car = 1;
    string id = 2;
}

message UpdateCarResponse {
    Car car = 1;
}